Improve OpenAPI spec by: Create*Request for POST operations, paging for GET operations, OAuth2 scopes for every request. #34
