# springjpa/src/main/java/org/softwarecave/springjpa/asset/web/AssetController.java
@@ -3,14 +3,17 @@ package org.softwarecave.springjpa.asset.web;
 import org.mapstruct.factory.Mappers;
 import org.softwarecave.springjpa.asset.service.AssetService;
 import org.softwarecave.springjpa.asset.web.mapper.AssetMapper;
+import org.softwarecave.springjpa.asset.web.mapper.AssetPageMapper;
 import org.softwarecave.springjpa.openapi.api.AssetsApi;
-import org.softwarecave.springjpa.openapi.model.Asset;
-import org.softwarecave.springjpa.openapi.model.AssetListPage;
+import org.softwarecave.springjpa.openapi.model.AssetPage;
+import org.softwarecave.springjpa.openapi.model.CreateAssetRequest;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+
+import java.util.List;
 
 @RestController
 @RequestMapping("/api/v1")
@@ -18,14 +21,16 @@ public class AssetController implements AssetsApi {
 
     private final AssetService assetService;
     private final AssetMapper mapper;
+    private final AssetPageMapper assetPageMapper;
 
     public AssetController(AssetService assetService) {
         this.assetService = assetService;
         this.mapper = Mappers.getMapper(AssetMapper.class);
+        this.assetPageMapper = Mappers.getMapper(AssetPageMapper.class);
     }
 
     @Override
-    public ResponseEntity<Void> createAsset(Asset assetApi) {
+    public ResponseEntity<Void> createAsset(CreateAssetRequest assetApi) {
         var asset = mapper.toModel(assetApi);
 
         var savedAsset = assetService.addAsset(asset);
@@ -36,17 +41,12 @@ public class AssetController implements AssetsApi {
     }
 
     @Override
-    public ResponseEntity<AssetListPage> getAssets(String name, String assetClassName, Integer page, Integer size, String sort) {
+    public ResponseEntity<AssetPage> getAssets(String name, String assetClassName, Integer page, Integer size, List<String> sort) {
         var pageable = PageRequest.of(page, size);//TODO: add sort
 
         var assetPage = assetService.findFiltered(name, assetClassName, pageable);
 
-        var responseContent = assetPage.getContent().stream()
-                .map(mapper::toApiModel)
-                .toList();
-        var response = new AssetListPage()
-                .content(responseContent);
-        //TODO: add page information in response
-        return ResponseEntity.ok(response);
+        var assetPageApi = assetPageMapper.toAssetPageApi(assetPage);
+        return ResponseEntity.ok(assetPageApi);
     }
 }
